# sk-manager-extension

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  setup-native-host.sh
.github/workflows/: ci.yml
docs/: README.md
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content/: content.js  injected-bridge.js
native/: Cargo.toml  README.md
native/src/: device.rs  fido2.rs  main.rs  piv.rs  protocol.rs  transport.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  global.d.ts  vite-env.d.ts
web/src/components/: DeviceList.tsx  index.ts
web/src/pages/: Dashboard.tsx  DebugConsole.tsx  FIDO2.tsx  PIV.tsx  Protocols.tsx  index.ts
web/src/services/: ConnectionManager.ts
web/src/styles/: App.css  Dashboard.css  DebugConsole.css  DeviceList.css  FIDO2.css  Protocols.css  index.css
web/src/utils/: index.ts
